# ChatterBot

./: .codeclimate.yml  .comment  .data  .debug_abbrev  .debug_aranges  .debug_info  .debug_line  .debug_loc  .debug_ranges  .debug_str  .dynamic  .dynstr  .dynsym  .eh_frame  .eh_frame_hdr  .fini  .fini_array  .gitignore  .gnu.hash  .gnu.version  .gnu.version_r  .got  .got.plt  .hash  .init  .init_array  .interp  .note.ABI-tag  .note.gnu.build-id  .plt  .project  .rela.dyn  .rela.plt  .rodata  .shstrtab  .strtab  .symtab  .text  .travis.yml  CODE_OF_CONDUCT.md  (+98 more)
.codeboarding/: ChatBot.md  Chatbot_Core_Engine.json  Chatbot_Core_Engine.rst  Data_Storage_Training.json  Input_Output_Processors.json  LLM_Integration.json  LLM_Integration.rst  LogicAdapter.md  Logic_Response_Adapters.json  Statement.md  StorageAdapter.md  Trainer.md  analysis.json  codeboarding_version.json  on_boarding.md  overview.rst
.deps/: ar.Po  arscan.Po  default.Po  dir.Po  file.Po  function.Po  getopt1.Po  hash.Po  implicit.Po  loadavg-getloadavg.Po  main.Po  read.Po  remake.Po  remote-stub.Po  rule.Po  strcache.Po  version.Po
.github/: FUNDING.yml  lock.yml
AutoSploit/: CONTRIBUTING.md  README.md  autosploit.py  drysploit.sh  install.sh  quicksploit.sh  requirements.txt  runsploit.sh
ChatterBot/: __init__.py
calysto_processing/: __init__.py  __main__.py  kernel.py
chatterbot/: __init__.py  __main__.py  adapters.py  algorithms.py  chatterbot.py  comparisons.py  components.py  constants.py  conversation.py  corpus.py  engram.py  exceptions.py  filters.py  languages.py  llm.py  matching.py  mcp_tools.py  parsing.py  preprocessors.py  preprocessors_greek.py  queues.py  response_selection.py  search.py  stemming.py  tagging.py  tokenizers.py  trainers.py  training.py  twitter_api.py  types.py  utils.py  vectorstores.py
cleverbot/: cleverbot.py
codestyles/: Default.xml
config/: Makefile  dospaths.m4  gettext.m4  intmax.m4  longlong.m4  signed.m4  size_max.m4  ulonglong.m4  wchar_t.m4  wint_t.m4
conversation_engrams/: 2014-09-04-09-17-00-02  2014-09-04-09-17-00-04  2014-09-05-09-54-18  2014-09-05-18-10-40  2014-09-05-18-32-20  2014-09-05-18-34-52  2014-09-05-18-36-12  2014-09-06-18-04-52  2014-09-06-19-03-47  2014-09-06-19-09-04  2014-09-06-19-32-26  2014-09-06-19-34-48  2014-09-06-19-48-45  2014-09-07-07-17-33  2014-09-07-07-35-38  2014-09-07-07-38-38  2014-09-07-07-48-04  2014-09-07-07-52-14  2014-09-07-07-57-17  2014-09-07-08-11-55  2014-09-4-09-17-00-01  2014-09-4-09-17-00-02  2014-09-4-09-17-00-03  2014-09-4-09-17-00-04  2014-10-15-15-17-05
doc/: Makefile  Makefile.am  Makefile.in  fdl.texi  make.texi  stamp-vti
docs/: Makefile  about.rst  authors.rst  chatterbot.rst  commands.rst  comparisons.rst  conf.py  contributing.rst  conversations.rst  corpus.rst  developers.rst  development.rst  django.rst  encoding.rst  examples.rst  faq.rst  filters.rst  glossary.rst  history.rst  index.rst  installation.rst  large-language-models.rst  make.bat  packaging.rst  preprocessors.rst  quickstart.rst  readme.rst  releases.rst  robots.txt  security.rst  sessions.rst  setup.rst  testing.rst  training.rst  tutorial.rst  upgrading.rst  usage.rst  utils.rst
electron-webpack-quick-start/: README.md  package.json
examples/: action_intent_example.py  basic_example.py  cleverbot.py  convert_units.py  default_response_example.py  export_example.py  gitter_example.py  hipchat_bot.py  learning_feedback_example.py  learning_new_response.py  mailgun.py  math_and_time.py  memory_sql_example.py  microsoft_bot.py  no_output_example.py  no_output_meaning_example.py  ollama_example.py  openai_example.py  tagged_dataset_example.py  (+17 more)
make-3.81-src/src/make/3.81/make-3.81-src/: AUTHORS  ChangeLog  Makefile.DOS  Makefile.am  Makefile.ami  Makefile.in  NEWS  README  README.Amiga  README.DOS  README.OS2  README.W32  README.customs  acinclude.m4  aclocal.m4  amiga.h  arscan.c  build.sh.in  build_w32.bat  config.ami  config.h  config.h-vms  config.h.in  configure  configure.bat  debug.h  default.c  dep.h  dir.c  dosbuild.bat  expand.c  file.c  filedef.h  implicit.c  job.c  job.h  link.dbg  link.rel  main.c  make_msvc_net2003.vcproj  (+10 more)
make-3.81-src/src/make/3.81/make-3.81-src/config/: ChangeLog  Makefile.am  Makefile.in  config.guess  lib-ld.m4  lib-prefix.m4  longdouble.m4  po.m4  printf-posix.m4  texinfo.tex  xsize.m4
make-3.81-src/src/make/3.81/make-3.81-src/doc/: make-stds.texi
make-3.81-src/src/make/3.81/make-3.81-src/glob/: ChangeLog  Makefile  Makefile.am  Makefile.ami  SCOPTIONS  configure.bat  fnmatch.c  glob.c  glob.h
make-3.81-src/src/make/3.81/make-3.81-src/po/: ChangeLog  Makefile.in.in  POTFILES.in  da.po  de.gmo  de.po  es.gmo  es.po  fi.po  fr.gmo  ga.gmo  ga.po  hr.gmo  make.pot  pl.gmo  pl.po  ru.gmo  ru.po  rw.gmo  sv.gmo  sv.po  uk.po  vi.gmo
make-3.81-src/src/make/3.81/make-3.81-src/tests/: ChangeLog  mkshadow  test_driver.pl
make-3.81-src/src/make/3.81/make-3.81-src/tests/scripts/features/: conditionals  echoing  mult_rules  override  patspecific_vars  quoting  reinvoke  se_explicit  se_statpat  targetvars  vpath  vpath2
make-3.81-src/src/make/3.81/make-3.81-src/tests/scripts/functions/: call  error  filter-out  foreach  realpath  shell  sort  word
make-3.81-src/src/make/3.81/make-3.81-src/tests/scripts/misc/: general4
make-3.81-src/src/make/3.81/make-3.81-src/tests/scripts/options/: dash-B  dash-k  dash-q  general
make-3.81-src/src/make/3.81/make-3.81-src/tests/scripts/targets/: INTERMEDIATE  PHONY  SILENT
make-3.81-src/src/make/3.81/make-3.81-src/tests/scripts/variables/: MAKE_RESTARTS  MFILE_LIST  automatic
make-3.81-src/src/make/3.81/make-3.81-src/w32/: Makefile
make-3.81-src/src/make/3.81/make-3.81-src/w32/compat/: dirent.c
make-3.81-src/src/make/3.81/make-3.81-src/w32/include/: sub_proc.h
make-3.81-src/src/make/3.81/make-3.81-src/w32/subproc/: proc.h  sub_proc.c
w32/: Makefile  Makefile.am  Makefile.in  pathstuff.c
w32/.deps/: libw32_a-pathstuff.Po  libw32_a-sub_proc.Po
w32/include/: dirent.h  pathstuff.h  w32err.h
w32/subproc/: NMakefile  build.bat  misc.c  w32err.c
(+918 files in other folders)
