[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages=[
    "chatterbot",
    "chatterbot.storage",
    "chatterbot.logic",
    "chatterbot.ext",
    "chatterbot.ext.sqlalchemy_app",
    "chatterbot.ext.django_chatterbot",
    "chatterbot.ext.django_chatterbot.migrations",
]

[tool.setuptools.dynamic]
version = {attr = "chatterbot.__version__"}

[project]
name = "ChatterBot"
requires-python = ">=3.9,<3.13"
urls = { Documentation = "https://docs.chatterbot.us", Repository = "https://github.com/gunthercox/ChatterBot", Changelog = "https://github.com/gunthercox/ChatterBot/releases" }
description = "ChatterBot is a machine learning, conversational dialog engine"
authors = [
  {name = "Gunther Cox"},
]
license = "BSD-3-Clause"
readme = "README.md"
dynamic = ["version"]
keywords = [
    "ChatterBot",
    "chatbot",
    "chat",
    "bot",
    "natural language processing",
    "nlp",
    "artificial intelligence",
    "ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Communications :: Chat",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Filters",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "mathparse>=0.1,<0.2",
    "python-dateutil>=2.9,<2.10",
    "sqlalchemy>=2.0,<2.1",
    "spacy>=3.8,<3.9",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "flake8",
    "coverage",
    "sphinx>=5.3,<8.2",
    "sphinx-sitemap>=2.6.0",
    "huggingface_hub",
]
dev = [
    "pint>=0.8.1",
    "pyyaml>=6.0,<7.0",
    "chatterbot-corpus>=1.2.2,<1.3.0",
    "ollama>=0.4.7,<1.0",
    "openai"
]
redis = [
    "redis[hiredis]<5.3",
    "langchain-redis<=0.2.0",
    "langchain-huggingface<=0.1.2",
    "accelerate<=1.6.0",
    "sentence-transformers<=4.0.2",
]
mongodb = [
    "pymongo>=4.11,<4.12",
]
