[wheel]
universal = 1

[bdist_wheel]
universal = 1

[metadata]
description-file = README.md

[nosetests]
exclude-dir=tests_django

[flake8]
# H202: assertRaises Exception too broad
# H306: imports not in alphabetical order (time, os)
ignore = H202,H306
max_line_length = 175
exclude =
    .eggs,
    .git,
    build,