[wheel]
universal = 1

[bdist_wheel]
universal = 1

[metadata]
description-file = README.md

[nosetests]
verbosity = 3
nocapture = true
exclude = (?:^tests_django$)
with-coverage = true
cover-package = chatterbot

[flake8]
# H306: imports not in alphabetical order (time, os)
ignore = H306
max_line_length = 175
exclude = .eggs, .git, .tox, build,