[wheel]
universal = 1

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[nosetests]
verbosity = 2
nocapture = true
exclude = (?:^tests_django$)
with-coverage = true
cover-package = chatterbot
cover-erase = true
cover-min-percentage = 40

[flake8]
# H306: imports not in alphabetical order (time, os)
ignore = H306
max_line_length = 175
exclude = .eggs, .git, .tox, build,

[chatterbot]
version = 1.1.0a7
author = Gunther Cox
email = gunthercx@gmail.com
url = https://github.com/gunthercox/ChatterBot
